attachments: Optimize getting list of attachments
Problem: Yobi sent a request to get a list of attachments for each
comments. It issued huge amount of requests when the user read an issue
with many comments.

Solution: Embed the list of attachments as a value of data-attachments
attribute and render the list by using javascript.

I expect the total requests will reduce by 41%.

--- a/app/views/board/partial_comments.scala.html
+++ b/app/views/board/partial_comments.scala.html
@@ -24,6 +24,7 @@
 @import utils.TemplateHelper._
 @import utils.AccessControl._
 @import utils.JodaDateUtil
+@import play.libs.Json.toJson
 
 @isAuthorComment(commentId: String) = @{
     if(commentId == UserApp.currentUser().loginId) {"author"}
@@ -63,7 +64,7 @@
 
             <div id="comment-body-@comment.id">
                 <div class="comment-body markdown-wrap markdown-before" markdown="true">@comment.contents</div>
-                <div class="attachments pull-right" data-resource-type="@ResourceType.NONISSUE_COMMENT" data-resource-id="@comment.id"></div>
+                <div class="attachments pull-right" data-attachments="@toJson(AttachmentApp.getFileList(ResourceType.NONISSUE_COMMENT.toString(), comment.id.toString()))"></div>
             </div>
         </div>
     </li>
