--- a/app/views/git/view.scala.html
+++ b/app/views/git/view.scala.html
@@ -26,6 +26,7 @@
 @import utils.AccessControl._
 @import models.enumeration
 @import scala.collection.JavaConversions._
+@import play.libs.Json.toJson
 
 @projectLayout(Messages("menu.pullRequest"), project, utils.MenuType.PULL_REQUEST) {
     @projectMenu(project, utils.MenuType.PULL_REQUEST, "main-menu-only")
@@ -48,7 +49,7 @@
                 <i class="yobicon-loading2"></i> @Messages("common.loading")
             </div>
             <div class="content markdown-wrap markdown-before" markdown="true">@pull.body</div>
-            <div class="attachments" data-resource-type="@ResourceType.PULL_REQUEST" data-resource-id="@pull.id"></div>
+            <div class="attachments" data-attachments="@toJson(AttachmentApp.getFileList(ResourceType.PULL_REQUEST.toString(), pull.id.toString()))"></div>
         </div>
 
         <div id="state" class="pullRequest-stateInfo">
