--- a/app/views/board/view.scala.html
+++ b/app/views/board/view.scala.html
@@ -24,6 +24,7 @@
 @import utils.TemplateHelper._
 @import utils.AccessControl._
 @import models.enumeration._
+@import play.libs.Json.toJson
 @implicitField = @{ helper.FieldConstructor(simpleForm) }
 
 @urlToPostings = @{ urlToList(request.getHeader("Referer"), routes.BoardApp.posts(project.owner, project.name).toString()) }
@@ -63,7 +64,7 @@
                 <i class="yobicon-loading2"></i> @Messages("common.loading")
             </div>
     		<div class="content markdown-wrap markdown-before" markdown="true">@post.body</div>
-        <div class="attachments" id="attachments" data-resource-type="@ResourceType.BOARD_POST" data-resource-id="@post.id"></div>
+            <div class="attachments" id="attachments" data-attachments="@toJson(AttachmentApp.getFileList(ResourceType.BOARD_POST.toString(), post.id.toString()))"></div>
     	</div>
     	<div class="board-footer board-actrow">
     	    <div class="pull-left">
