--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -32,6 +32,7 @@
 @import utils.TemplateHelper._
 @import utils.AccessControl._
 @import utils.Config
+@import play.libs.Json.toJson
 
 @getTitle(issue:Issue) = @{ "#" + issue.getNumber + " " + issue.title }
 
@@ -98,8 +99,7 @@
                     </div>
                     <div class="content markdown-wrap markdown-before" markdown="true">@issue.body</div>
                 }
-                <div class="attachments" id="attachments" data-resource-type="@ResourceType.ISSUE_POST" data-resource-id="@issue.id"></div>
-
+                <div class="attachments" id="attachments" data-attachments="@toJson(AttachmentApp.getFileList(ResourceType.ISSUE_POST.toString(), issue.id.toString()))"></div>
                 <div class="board-actrow right-txt">
                     <div class="pull-left">
                         <div>
