--- a/app/views/code/view.scala.html
+++ b/app/views/code/view.scala.html
@@ -18,14 +18,14 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
-@(project:Project, branches:List[String], recursiveData:List[org.codehaus.jackson.node.ObjectNode], branch:String, path:String)
+@(project:Project, branches:List[String], recursiveData:List[com.fasterxml.jackson.databind.node.ObjectNode], branch:String, path:String)
 
 @import utils.TemplateHelper._
 @import utils.TemplateHelper.Branches._
 @import utils.TemplateHelper.CodeBrowser._
 @import java.net.URLEncoder
 
-@parseFileInfo(files:org.codehaus.jackson.node.ObjectNode) = {
+@parseFileInfo(files:com.fasterxml.jackson.databind.node.ObjectNode) = {
     @fieldText(files, "type") match {
         case "folder" => {
             @partial_view_folder(project, files.get("data"), branch, fieldText(files, "path"))
